Jumbotron styling. New Issue: White space under jumbotron.

--- a/themes/roots-nextdatagov/assets/less/app.less
+++ b/themes/roots-nextdatagov/assets/less/app.less
@@ -251,16 +251,20 @@ div.frontpage-search {
    Content
    ========================================================================== */
 
-.header.banner.page-heading {
+.jumbotron {
     background-color : #76adf0;
     background-color : rgba(0, 131, 223, .5);
     color : #fff;    
 
-    .page-header {
-        border : 0;        
+    .container {
         
         h1 {
-            font-family: 'Abel', Helvetica, sans-serif;      	        
+            font-family: 'Lato', Helvetica, sans-serif;
+            font-size: 27pt;
+        }
+
+        p {
+          font-size: 12pt;
         }
     }
 
